tests/NormalTests/paczka1/small_fuzzy/75410197.err
Error in line 5: P6ker S295 84,0
Error in line 8: P6ker A945 17,7
Error in line 1: 6Qj S295 49,0
